--- a/writenow-ui/src/styles/tokens.css
+++ b/writenow-ui/src/styles/tokens.css
@@ -38,6 +38,11 @@
   --color-warning: #ffaa44;
 
   /* --------------------------------------------------------------------------
+     颜色系统 - 遮罩层
+     -------------------------------------------------------------------------- */
+  --color-overlay: rgba(0, 0, 0, 0.8);
+
+  /* --------------------------------------------------------------------------
      间距系统
      -------------------------------------------------------------------------- */
   --space-0: 0px;
